--- a/public/frontend/index.html
+++ b/public/frontend/index.html
@@ -14,9 +14,7 @@
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
@@ -912,9 +910,9 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>Groovin</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>ICON ISL</span></strong>. All Rights Reserved
             </div>
-            <div class="credits">Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a></div>
+            <div class="credits">Designed by <a href="#"><img src="assets/img/logo.png" width="50" class="p-1 rounded-1 bg-white" alt=""></a></div>
         </div>
     </footer><!-- End Footer -->
 
