--- a/public/frontend/test.html
+++ b/public/frontend/test.html
@@ -1,66 +1,152 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OCR using Javascript and appscript</title>
+    <title>Make A Responsive Carousel with Thumbnails using Owl Carousel - ByteWebster</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
     <style>
-        .ocr{
-            width: 100%;
+        /* Custom styles for the carousel */
+        body {
+            background: #f2f2f2;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .section {
+            padding: 50px;
+        }
+
+        .owl-carousel {
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+        }
+
+        .item {
             display: flex;
+            flex-direction: column;
             align-items: center;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .item h2 {
+            font-size: 1.3rem;
+            font-weight: 500;
+            margin: 15px 0;
+        }
+
+        .item p {
+            font-weight: 300;
+        }
+
+        .item img {
+            max-width: 100%;
+            border-radius: 10px;
+            margin: 0 auto; /* Center the image */
+        }
+
+        .owl-thumbs {
+            display: flex;
             justify-content: center;
-            flex-direction:column;
+            margin-top: 20px;
         }
-        .ocr *{
-            margin-top: 5px;
+
+        .owl-thumb-item {
+            width: 50px;
+            height: 50px;
+            margin: 0 5px;
+            border-radius: 10px;
+            cursor: pointer;
         }
-        .text{
-            width: 80%;
-            height: 150px;
+
+        .owl-thumb-item img {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
         }
     </style>
 </head>
+
 <body>
-    <div class="ocr">
-        <h1>Image And PDF OCR Tool</h1>
-        <h2 class="message"></h2>
-        <span>Select a File</span>
-        <input type="file" class="file">
-        <button class="btn">Perform OCR</button>
-        <span>Result Text</span>
-        <textarea class="text"></textarea>
+    <div class="section">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img src="https://images.unsplash.com/photo-1556206079-747a7a424d3d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80"
+                    alt="Hawaii">
+                <h2>Enjoy the exotic of sunny Hawaii</h2>
+                <p>Maui, Hawaii</p>
+            </div>
+            <!-- Repeat the same structure for other slides -->
+        </div>
+        <div class="owl-thumbs" id="thumbs">
+            <!-- Thumbnails will be added here using JavaScript -->
+        </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script>
-        let api = "_YOUR_APPSCRIPT_API_HERE_";
-        let msg = document.querySelector(".message");
-        let file = document.querySelector(".file");
-        let btn = document.querySelector(".btn");
-        let text = document.querySelector(".text");
-        btn.addEventListener('click',()=>{
-            msg.innerHTML=`Loading..`;
-            let fr = new FileReader();
-            fr.readAsDataURL(file.files[0])
-            fr.onload=()=>{
-                let res = fr.result;
-                let b64 = res.split("base64,")[1];
-                fetch(api,{
-                    method:"POST",
-                    body:JSON.stringify({
-                        file:b64,
-                        type:file.files[0].type,
-                        name:file.files[0].name
-                    })
-                })
-                  .then(res => res.text())
-                  .then(data => {
-                    text.innerHTML=data;
-                    msg.innerHTML=``;
-                  });
-            }
-        })
+        $(document).ready(function () {
+            var mainSlider = $(".owl-carousel").owlCarousel({
+                items: 1, // Number of visible items
+                loop: true,
+                center: true,
+                margin: 20,
+                stagePadding: 20,
+                autoplay: true,
+                autoplayTimeout: 3000,
+                autoplayHoverPause: true,
+                responsiveClass: true,
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    600: {
+                        items: 2
+                    },
+                    1000: {
+                        items: 3
+                    }
+                }
+            });
+
+            var thumbs = $("#thumbs").owlCarousel({
+                items: 5,
+                dots: false,
+                nav: false,
+                margin: 10,
+                responsive: {
+                    0: {
+                        items: 4
+                    },
+                    600: {
+                        items: 5
+                    },
+                    1000: {
+                        items: 5
+                    }
+                }
+            });
+
+            // Synchronize main slider with thumbnails
+            mainSlider.owlCarousel().on('changed.owl.carousel', function (e) {
+                if (!e.namespace || e.property.name !== 'position') return;
+                var current = e.relatedTarget.relative(e.relatedTarget.current());
+                thumbs.owlCarousel('to', current, 100, true);
+            });
+
+            // Populate thumbnails
+            $(".owl-item").each(function () {
+                var thumbSrc = $(this).find("img").attr("src");
+                $("#thumbs").owlCarousel('add', '<div class="owl-thumb-item"><img src="' + thumbSrc + '"></div>').owlCarousel('update');
+            });
+        });
     </script>
 </body>
+
 </html>
