--- a/public/frontend/index2.html
+++ b/public/frontend/index2.html
@@ -110,84 +110,18 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero">
         <div class="hero-container">
-            <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div id="heroCarousel" data-bs-interval="4000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
                 <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
-
                 <div class="carousel-inner" role="listbox">
-                    <!-- Slide 1 -->
-                    <!-- <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-3.jpg);"> -->
-                    <div class="carousel-item active" style="background: #e4e4e4">
-                        <div class="carousel-container">
-                            <div class="intro-wrapper">
-                                <div>
-                                    <div class="intro-logo">
-                                        <img src="assets/img/logo.png" alt="">
-                                    </div>
-                                    <div class="intro-cover">
-                                        <h1 class="intro-title">Content Revel on Page Scroll</h1>
-                                    </div>
-                                    <div class="intro-text">
-                                        <span class="animate__animated animate__fadeInUp">
-                                            <h4>WELCOME</h4>
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="particles-js"></div>
-
-                    </div>
-
                     <!-- Slide 2 -->
-                    <div class="carousel-item" style="background-image: url(assets/img/slide/slider-1.jpeg);">
-                        <div class="carousel-container">
-                            <!-- <div class="carousel-content">
-                                <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-                                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui
-                                    aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem
-                                    mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti
-                                    vel. Minus et tempore modi architecto.</p>
-                                <div>
-                                    <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">ReadMore</a>
-                                </div>
-                            </div> -->
-                        </div>
-                    </div>
+                    <div class="carousel-item active" style="background-image: url(assets/img/slide/slider-1.jpeg);"></div>
 
                     <!-- Slide 3 -->
-                    <div class="carousel-item" style="background-image: url(assets/img/slide/slider-2.jpeg);">
-                        <div class="carousel-container">
-                            <!-- <div class="carousel-content">
-                                <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-                                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui
-                                    aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem
-                                    mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti
-                                    vel. Minus et tempore modi architecto.</p>
-                                <div>
-                                    <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">ReadMore</a>
-                                </div>
-                            </div> -->
-                        </div>
-                    </div>
+                    <div class="carousel-item" style="background-image: url(assets/img/slide/slider-2.jpeg);"></div>
 
                     <!-- Slide 4 -->
-                    <div class="carousel-item" style="background-image: url(assets/img/slide/slider-3.jpeg);">
-                        <div class="carousel-container">
-                            <!-- <div class="carousel-content">
-                                <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-                                <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui
-                                    aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem
-                                    mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti
-                                    vel. Minus et tempore modi architecto.</p>
-                                <div>
-                                    <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">ReadMore</a>
-                                </div>
-                            </div> -->
-                        </div>
-                    </div>
-
-                    <!-- <div id="particles-js"></div> -->
+                    <div class="carousel-item" style="background-image: url(assets/img/slide/slider-3.jpeg);"></div>
                 </div>
 
                 <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
